src/core/Claroline/CoreBundle/Tests/Stub/plugin/Invalid/UnexpectedTranslationKey1/InvalidUnexpectedTranslationKey1.php
<?php

namespace Invalid\UnexpectedTranslationKey1;

use Claroline\CoreBundle\Library\PluginBundle;

class InvalidUnexpectedTranslationKey1 extends PluginBundle
{
    public function getNameTranslationKey()
    {
        return array();
    }
}